# MyNotes

./: 2进制8进制16进制快速互转技巧.md
C/: strstr()、strcpy()、strcat()函数的实现.md
C++/1)作用域/: 作用域.cpp
C++/10)引用/1)引用的语法/: 引用的语法.cpp
C++/10)引用/2)数组的引用/: 数组的引用.cpp
C++/10)引用/3)指针的引用/: 指针的引用.cpp
C++/10)引用/4)常量引用/: 常量引用.cpp
C++/11)类-初识/1)计算圆的周长/: 计算圆的周长.cpp
C++/11)类-初识/2)设计学生类/: 设计学生类.cpp
C++/12)内联函数/1)预处理宏的缺陷/: 预处理宏的缺陷.cpp
C++/13)函数的默认参数&函数的占位参数/: 函数的默认参数.cpp
C++/14)函数重载/: 函数重载.cpp
C++/15)函数重载的原理/使用g++编译.cpp文件得到汇编代码/: test.s  使用g++编译.cpp文件得到汇编代码.cpp  执行编译步骤.txt
C++/15)函数重载的原理/使用gcc编译.c文件得到汇编代码/: test.s  使用gcc编译.c文件得到汇编代码.c  执行编译步骤.txt
C++/16)C++调用C语言的函数/: C++调用C语言的函数.cpp  test.c  test.h
C++/18)模板/1)函数模版/: 函数模版.cpp
C++/18)模板/2)函数模版和普通函数的调用规则/: 函数模版和普通函数的调用规则.cpp
C++/18)模板/3)函数模版的具体化/: 函数模版的具体化.cpp
C++/18)模板/4)类模版/: 类模版.cpp
C++/18)模板/5)类模版做为函数参数/: 类模版做为函数参数.cpp
C++/18)模板/6)类模版的继承/: 类模版的继承.cpp
C++/18)模板/7)类的成员函数的类外类内实现/: 类的成员函数的类外类内实现.cpp
C++/18)模板/8)类模版分文件编写/: Maker.cpp  Maker.hpp  类模版分文件编写.cpp
C++/18)模板/9)类模版遇到友元/: 类模版遇到友元.cpp
C++/19)类型转换/: 类型转换.cpp
C++/2)命名空间/1)命名空间只能定义在全局/: 命名空间只能定义在全局.cpp
C++/2)命名空间/2)命名空间可以嵌套命名空间/: 命名空间可以嵌套命名空间.cpp
C++/20)异常/3)栈解旋/: 栈解旋.cpp
C++/26)C++11右值引用/: C++11右值引用.cpp
C++/3)using声明和编译指令/: using声明和编译指令.cpp
C++/4)命名空间的使用/: 命名空间的使用.cpp
C++/5)struct加强/: struct加强.cpp
C++/6)C++更加严格的类型转换检查/: C++更加严格的类型转换检查.cpp
C++/9)尽量用const替代define/: 尽量用const替代define.cpp
C/数据结构/: read.txt
DOC/C_CPP/: STL讲义.docx  c++讲义.doc  数据结构.doc
Linux/: Linux安装VMWare tools挂载hgfs共享文件.txt
Linux系统编程/2)静态连接和动态连接/: test.c
Linux系统编程/4)GDB调试器/: test.c
PHP/pcntl-守护进程/: PHP异步处理任务实现.7z  daemon.php
Samples/C++遍历目录下所有文件(包括子级目录递归遍历)/: C++遍历目录下所有文件(包括子级目录递归遍历).cpp
实战项目/2)精仿百度网盘项目/: Vim自动补全-梁老师.docx
实战项目/2)精仿百度网盘项目/samples/03_mysql/02_mysqlcppconn/: CMakeLists.txt  installDeps.sh  jdbc_test.cpp
实战项目/2)精仿百度网盘项目/samples/cloud_disk_server_framework/: CMakeLists.txt  README
实战项目/2)精仿百度网盘项目/samples/cloud_disk_server_framework/common/: FastCGIApplication.cpp  MD5Maker.cpp  TokenHelper.cpp
实战项目/2)精仿百度网盘项目/samples/cloud_disk_server_framework/common/common/: Base64Codec.cpp  FastCGIApplication.cpp
实战项目/2)精仿百度网盘项目/samples/cloud_disk_server_framework/conf/: cfg.json  client.conf  storage.conf  tracker.conf
实战项目/2)精仿百度网盘项目/samples/cloud_disk_server_framework/include/: Base64Codec.h  ConfigHelper.h  FastCGIApplication.h  MD5Maker.h  TokenHelper.h
实战项目/2)精仿百度网盘项目/samples/cloud_disk_server_framework/src_cgi/: dealfile_cgi.cpp  dealsharefile_cgi.cpp  login_cgi.cpp  md5_cgi.cpp  myfiles_cgi.cpp  register_cgi.cpp  sharefiles_cgi.cpp  upload_cgi.cpp
实战项目/2)精仿百度网盘项目/samples/cloud_disk_server_framework/test/: testFastCGIApplication.cpp
(+1181 files in other folders)
